Homework 7 completed