@@ -7,6 +7,7 @@ import org.openqa.selenium.support.FindBy;
 import org.openqa.selenium.support.ui.ExpectedConditions;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class JdiDifferentElementsPage extends AbstractJdiBasePage {
 
@@ -31,21 +32,21 @@ public class JdiDifferentElementsPage extends AbstractJdiBasePage {
     }
 
     public void selectItem(String itemName) {
-        items.stream().filter(item -> item.getText().contains(itemName)).toList().get(0).click();
+        items.stream().filter(item -> item.getText().contains(itemName)).collect(Collectors.toList()).get(0).click();
     }
 
     public void selectInDropDown(String dropdownItemName) {
         dropdownMenu.click();
         try {
             wait.until(ExpectedConditions.visibilityOf(
-                    dropdownItems.stream().filter(item -> item.getText().contains(dropdownItemName)).toList().get(0)));
-            dropdownItems.stream().filter(item -> item.getText().contains(dropdownItemName)).toList().get(0).click();
+                    dropdownItems.stream().filter(item -> item.getText().contains(dropdownItemName)).collect(Collectors.toList()).get(0)));
+            dropdownItems.stream().filter(item -> item.getText().contains(dropdownItemName)).collect(Collectors.toList()).get(0).click();
         } catch (ArrayIndexOutOfBoundsException e) {
             System.out.println("Index 0 out of bounds for length 0");
         }
     }
 
     public List<String> getItemLogs() {
-        return logs.stream().map(WebElement::getText).toList();
+        return logs.stream().map(WebElement::getText).collect(Collectors.toList());
     }
 }
